# deleteSSXX

./: README.md
c++/revowel/: CMakeLists.txt  delsx.cpp  delsx.hpp  dynamicMemory.c  dynamicMemory.h  female.pcm  fft.c  fft.h  main.cpp  signal.cpp  signal.hpp
matlab/: bandpass1.m  bandpass2.m  crosszeros.m  lowpass0.m  lowpass1.m  lowpass2.m  main5.m  pcm.m  segfilter.m
python/: main.py
